# wiki

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
blog/: index.html
blog/2024/03/08/first-post/: index.html
blog/2024/11/11/always-check-disk-space-before-installing-dependencies/: index.html
blog/archive/2024/: index.html
blog/category/devops/: index.html
blog/category/general/: index.html
docs/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: 2024-11-11-always-check-disk-space-before-installing-dependencies.md  first-post.md
docs/portfolio/: index.md  mkdocs-material-template.md  moonafly.md  omnitext.md  patient-diet-recorder.md  patient-input-output-recorder.md  patient-intake-output-recorder.md  permission-tree.md  sentify.md  sharacle.md  typing-contest-bot.md
portfolio/: index.html
portfolio/mkdocs-material-template/: index.html
portfolio/moonafly/: index.html
portfolio/omnitext/: index.html
portfolio/patient-diet-recorder/: index.html
portfolio/patient-input-output-recorder/: index.html
portfolio/patient-intake-output-recorder/: index.html
portfolio/permission-tree/: index.html
portfolio/sentify/: index.html
portfolio/sharacle/: index.html
portfolio/typing-contest-bot/: index.html
scripts/: readme_crawler.py
search/: search_index.json
