[project]
name = "wiki"
version = "0.1.0"
description = ""
authors = [
    {name = "lifeadventurer", email = "life0adventurer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.5.32",
    "mkdocs-glightbox>=0.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
]
